--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.1
+Pillow==10.1.0
 pluggy==1.2.0
 psycopg2==2.9.9
 pytest==7.4.0
