--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,8 +1,11 @@
 blinker==1.6.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.4
 colorama==0.4.6
 exceptiongroup==1.1.2
 Flask==2.3.2
+idna==3.6
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -12,5 +15,7 @@ Pillow==10.1.0
 pluggy==1.2.0
 psycopg2==2.9.9
 pytest==7.4.0
+requests==2.31.0
 tomli==2.0.1
+urllib3==2.1.0
 Werkzeug==2.3.6
